--- a/racking-legacy-servers-part-1.html
+++ b/racking-legacy-servers-part-1.html
@@ -47,10 +47,13 @@ boot, but it didn't make sense to have it stand outside the cabinets. So
 we gave heads up and asked some guys to stay behind after office hours.
 Thanks to Mona, Eric, Jing, Tim, and Mark(?) for the assist!</p>
 <p>Next up, the classic IBM BladeCenter!</p>
-<div class="g-post"
-data-href="https://plus.google.com/114642277785568765419/posts/7FNAGmLStBM">
+<!-- Place this tag in your head or just before your close body tag. -->
 
-</div>
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+
+<!-- Place this tag where you want the widget to render. -->
+
+<div class="g-post" data-href="https://plus.google.com/114642277785568765419/posts/7FNAGmLStBM"></div>
     </div><!-- /.entry-content -->
 
   </article>
