--- a/its-no-longer-about-the-number-of-monitors-you-have.html
+++ b/its-no-longer-about-the-number-of-monitors-you-have.html
@@ -17,9 +17,9 @@
                     <li><a href="/pages/about.html">About</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
                     <li><a href="/category/aside.html">Aside</a></li>
-                    <li class="active"><a href="/category/misc.html">Misc</a></li>
+                    <li><a href="/category/misc.html">Misc</a></li>
                     <li><a href="/category/python.html">Python</a></li>
-                    <li><a href="/category/systems-administration.html">Systems Administration</a></li>
+                    <li class="active"><a href="/category/systems-administration.html">Systems Administration</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -39,8 +39,8 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="/author/jon.html">jon</a>
         </address>
-<p>In <a href="/category/misc.html">Misc</a>. </p>
-
+<p>In <a href="/category/systems-administration.html">Systems Administration</a>. </p>
+<p>tags: <a href="/tag/systems-administration.html">Systems Administration</a> <a href="/tag/virtualization.html">Virtualization</a> </p>
 </footer><!-- /.post-info -->      <p>Unlike in the late 90s to mid 2000s, desktop real estate is no longer
 constrained by the number of monitors you use. We now tout the number of
 virtual machines we have access to. In fact, my ailing MBP has managed
@@ -48,10 +48,13 @@ to remain useful because remote access still enables me to work on all
 our VMs. Our applications and storage servers are all virtualized. Even
 some legacy systems have been replicated on VMs, allowing us to retire
 old and bulky server hardware.</p>
-<div class="g-post"
-data-href="https://plus.google.com/114642277785568765419/posts/ECQTnCpHHJi">
+<!-- Place this tag in your head or just before your close body tag. -->
 
-</div>
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+
+<!-- Place this tag where you want the widget to render. -->
+
+<div class="g-post" data-href="https://plus.google.com/114642277785568765419/posts/ECQTnCpHHJi"></div>
     </div><!-- /.entry-content -->
 
   </article>
