--- a/tags.html
+++ b/tags.html
@@ -40,7 +40,7 @@
         <li><a href="/tag/community.html">Community</a> (1)</li>
         <li><a href="/tag/community-work.html">Community Work</a> (4)</li>
         <li><a href="/tag/crystal-reports.html">Crystal Reports</a> (1)</li>
-        <li><a href="/tag/data-center.html">Data Center</a> (1)</li>
+        <li><a href="/tag/data-center.html">Data Center</a> (2)</li>
         <li><a href="/tag/domains.html">Domains</a> (1)</li>
         <li><a href="/tag/ec2.html">EC2</a> (1)</li>
         <li><a href="/tag/family.html">Family</a> (16)</li>
@@ -82,7 +82,7 @@
         <li><a href="/tag/relationships.html">Relationships</a> (1)</li>
         <li><a href="/tag/revision-control.html">Revision Control</a> (1)</li>
         <li><a href="/tag/sysads.html">Sysads</a> (1)</li>
-        <li><a href="/tag/systems-administration.html">Systems Administration</a> (18)</li>
+        <li><a href="/tag/systems-administration.html">Systems Administration</a> (20)</li>
         <li><a href="/tag/tech.html">Tech</a> (1)</li>
         <li><a href="/tag/technology.html">Technology</a> (24)</li>
         <li><a href="/tag/todo.html">TODO</a> (2)</li>
@@ -91,6 +91,7 @@
         <li><a href="/tag/valentines-day.html">Valentines Day</a> (1)</li>
         <li><a href="/tag/victory.html">Victory</a> (1)</li>
         <li><a href="/tag/victorycdo.html">VictoryCDO</a> (1)</li>
+        <li><a href="/tag/virtualization.html">Virtualization</a> (1)</li>
         <li><a href="/tag/writing.html">Writing</a> (1)</li>
         <li><a href="/tag/xavier-u.html">Xavier U</a> (1)</li>
     </ul>
