--- a/work-over-christmas-break-2014.html
+++ b/work-over-christmas-break-2014.html
@@ -40,7 +40,7 @@
                 By                         <a class="url fn" href="/author/jon.html">jon</a>
         </address>
 <p>In <a href="/category/systems-administration.html">Systems Administration</a>. </p>
-
+<p>tags: <a href="/tag/systems-administration.html">Systems Administration</a> <a href="/tag/data-center.html">Data Center</a> </p>
 </footer><!-- /.post-info -->      <p>10 years ago, I wouldn't be complaining at all. I could live in a
 datacenter for days until the job's done. But these days, my back aches
 are more pronounced, and fatigue sets in more easily. This is why it's
@@ -55,10 +55,13 @@ how a sysad's life goes. Meantime, there's going to be a ton of making
 up with the family in the next few days.</p>
 <p>Check out some of the photos here. A happy and prosperous new year to
 all!</p>
-<div class="g-post"
-data-href="https://plus.google.com/114642277785568765419/posts/YEt5yPsHYEm">
+<!-- Place this tag in your head or just before your close body tag. -->
 
-</div>
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+
+<!-- Place this tag where you want the widget to render. -->
+
+<div class="g-post" data-href="https://plus.google.com/114642277785568765419/posts/YEt5yPsHYEm"></div>
     </div><!-- /.entry-content -->
 
   </article>
