--- a/a-better-monday-than-most.html
+++ b/a-better-monday-than-most.html
@@ -41,8 +41,7 @@
         </address>
 <p>In <a href="/category/aside.html">Aside</a>. </p>
 
-</footer><!-- /.post-info -->      <p>The day's just begun and I'm already up to my neck with work. But I'm
-not complaining. At least it's server stuff and not some other crap!</p>
+</footer><!-- /.post-info -->      <p>The day's just begun and I'm already up to my neck with work. But I'm not complaining. At least it's server stuff and not some other crap!</p>
     </div><!-- /.entry-content -->
 
   </article>
