--- a/our-daughters-happy-13th.html
+++ b/our-daughters-happy-13th.html
@@ -42,14 +42,7 @@
         </address>
 <p>In <a href="/category/misc.html">Misc</a>. </p>
 <p>tags: <a href="/tag/family.html">Family</a> <a href="/tag/galleries.html">Galleries</a> <a href="/tag/katrina.html">Katrina</a> <a href="/tag/parenting.html">Parenting</a> </p>
-</footer><!-- /.post-info -->      <p>Our daughter asked to celebrate her birthday a day ahead, with her 8th
-grade classmates. They had water gun and balloon fights, and bags of
-holi powder to throw around. They also played frisbee and volleyball on
-the village streets and watched scary movies when it got dark. There
-were lots of food too! I didn't realize it was going to be so much fun!
-Thanks to my dear wife for making preparations, especially the cooking
-and baking. Thanks also to my sis-in-law Jenipur for the holi powder
-preps, and all the candy supplies. Some of the pics are here:</p>
+</footer><!-- /.post-info -->      <p>Our daughter asked to celebrate her birthday a day ahead, with her 8th grade classmates. They had water gun and balloon fights, and bags of holi powder to throw around. They also played frisbee and volleyball on the village streets and watched scary movies when it got dark. There were lots of food too! I didn't realize it was going to be so much fun! Thanks to my dear wife for making preparations, especially the cooking and baking. Thanks also to my sis-in-law Jenipur for the holi powder preps, and all the candy supplies. Some of the pics are here:</p>
 <!-- Place this tag in your head or just before your close body tag. -->
 
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
