--- a/todo.html
+++ b/todo.html
@@ -45,6 +45,10 @@
 </footer><!-- /.post-info -->      <script src="https://hackpad.com/6AG5iyzvADe.js?format=html-notitle"></script>
 
 <noscript><div>View <a href="https://hackpad.com/6AG5iyzvADe">JON TODO</a> on Hackpad.</div></noscript>
+
+<script src="https://hackpad.com/6AG5iyzvADe.js"></script>
+
+<noscript><div>View <a href="https://hackpad.com/6AG5iyzvADe">JON TODO</a> on Hackpad.</div></noscript>
     </div><!-- /.entry-content -->
 
   </article>
