--- a/tags.html
+++ b/tags.html
@@ -32,8 +32,8 @@
         <li><a href="http://jondoblados.github.io/tag/bug-tracking.html">Bug Tracking</a> (1)</li>
         <li><a href="http://jondoblados.github.io/tag/cdo.html">CDO</a> (1)</li>
         <li><a href="http://jondoblados.github.io/tag/cebu.html">Cebu</a> (2)</li>
-        <li><a href="http://jondoblados.github.io/tag/christianity.html">Christianity</a> (2)</li>
-        <li><a href="http://jondoblados.github.io/tag/christianity-amp-parenthood.html">Christianity amp; Parenthood</a> (10)</li>
+        <li><a href="http://jondoblados.github.io/tag/christianity.html">Christianity</a> (3)</li>
+        <li><a href="http://jondoblados.github.io/tag/christianity-amp-parenthood.html">Christianity amp; Parenthood</a> (9)</li>
         <li><a href="http://jondoblados.github.io/tag/christmas.html">Christmas</a> (1)</li>
         <li><a href="http://jondoblados.github.io/tag/civic.html">Civic</a> (1)</li>
         <li><a href="http://jondoblados.github.io/tag/cloud.html">Cloud</a> (1)</li>
@@ -74,6 +74,7 @@
         <li><a href="http://jondoblados.github.io/tag/openstack.html">OpenStack</a> (1)</li>
         <li><a href="http://jondoblados.github.io/tag/oracle.html">Oracle</a> (1)</li>
         <li><a href="http://jondoblados.github.io/tag/oracle-bi.html">Oracle BI</a> (1)</li>
+        <li><a href="http://jondoblados.github.io/tag/parenthood.html">Parenthood</a> (1)</li>
         <li><a href="http://jondoblados.github.io/tag/parenting.html">Parenting</a> (1)</li>
         <li><a href="http://jondoblados.github.io/tag/pelican.html">Pelican</a> (1)</li>
         <li><a href="http://jondoblados.github.io/tag/personal.html">Personal</a> (58)</li>
