--- a/ack.html
+++ b/ack.html
@@ -42,7 +42,7 @@
         </address>
 <p>In <a href="http://jon.doblados.net/category/tech.html">Tech</a>. </p>
 <p>tags: <a href="http://jon.doblados.net/tag/ibm.html">IBM</a> <a href="http://jon.doblados.net/tag/rs6000-b50.html">RS6000 B50</a> <a href="http://jon.doblados.net/tag/risc.html">RISC</a> </p>
-</footer><!-- /.post-info -->      <p>m down to my last two modules before this quarter ends. the first
+</footer><!-- /.post-info -->      <p>I'm down to my last two modules before this quarter ends. the first
 modules have been deployed and parallel-tested, with just a bit of flak
 coming from "concerned" users (since they're sooo used to stand-alone
 applications, they think that intranet applications would have the same
