--- a/pages/cv.html
+++ b/pages/cv.html
@@ -31,24 +31,31 @@
 		  <div role="main" class="content">
 
 <h1>CV</h1>
+<script type="text/javascript">
+td {
+  valign: top;
+}
+
+</script>
+
 <table>
   <tr>
-    <td valign="top">Name:</td>
-    <td valign="top">Jonathan Janairo Doblados</td>
-    <td valign="top">Mobile:</td>
-    <td valign="top">+63 908 812 9475</td>
+    <td>Name:</td>
+    <td>Jonathan Janairo Doblados</td>
+    <td>Mobile:</td>
+    <td>+63 908 812 9475</td>
   </tr>
   <tr>
-    <td valign="top">Date of Birth:</td>
-    <td valign="top">March 03, 1977</td>
-    <td valign="top">Email:</td>
-    <td valign="top">jon@doblados.net</td>
+    <td>Date of Birth:</td>
+    <td>March 03, 1977</td>
+    <td>Email:</td>
+    <td>jon@doblados.net</td>
   </tr>
   <tr>
-    <td valign="top">Address:</td>
-    <td valign="top">Ruby St. Golden Village, Carmen<br />Cagayan de Oro City<br />Misamis Oriental 9000<br />Philippines</td>
-    <td valign="top">Website:</td>
-    <td valign="top">http://jon.doblados.net</td>
+    <td>Address:</td>
+    <td>Ruby St. Golden Village, Carmen<br />Cagayan de Oro City<br />Misamis Oriental 9000<br />Philippines</td>
+    <td>Website:</td>
+    <td>http://jon.doblados.net</td>
   </tr>
 </table>
 
