--- a/pages/cv.html
+++ b/pages/cv.html
@@ -31,13 +31,7 @@
 		  <div role="main" class="content">
 
 <h1>CV</h1>
-<script type="text/javascript">
-td {
-  valign: top;
-}
-
-</script>
-
+<p><link rel="stylesheet" href="http://jon.doblados.net/pages/css/custom.css" type="text/css" /></p>
 <table>
   <tr>
     <td>Name:</td>
