--- a/pages/cv.html
+++ b/pages/cv.html
@@ -53,14 +53,14 @@
   </tr>
 </table>
 
+<h2>Qualifications</h2>
+
 <hr />
-<p><h2>Qualifications</h2></p>
-<table>
+<p><table>
   <tr>
     <td>SYSTEMS ADMINISTRATION</td>
-    <td>I have done GNU/Linux and BSD/Unix systems administration since 1995. I have 11 years of database design and administration experience, and 9 years of web programming experience. I also have 10 years of domains and web site and app hosting experience, and 7 years of cloud-computing and infrastructure experience.
-
-My proficiencies are in the areas of systems and network administration, infrastructure design, development, and deployment, web applications design and development, database design and development, and systems analysis and design.</td>
+    <td>I have done GNU/Linux and BSD/Unix systems administration since 1995. I have 11 years of database design and administration experience, and 9 years of web programming experience. I also have 10 years of domains and web site and app hosting experience, and 7 years of cloud-computing and infrastructure experience.</p>
+<p>My proficiencies are in the areas of systems and network administration, infrastructure design, development, and deployment, web applications design and development, database design and development, and systems analysis and design.</td>
   </tr>
   <tr>
     <td>PROJECT MANAGEMENT</td>
@@ -68,12 +68,10 @@ My proficiencies are in the areas of systems and network administration, infrast
   </tr>
   <tr>
     <td>TEAM MANAGEMENT</td>
-    <td>I am a team player and am able to handle individuals and teams, and drive or direct them as appropriate, to their personal, group, or corporate IT goals and targets. I am very proficient in communications, change management, and resource management.
-
-I have superior speaking and writing command in the English and Filipino languages, and am able to efficiently deal with foreign support managers and engineers.</td>
+    <td>I am a team player and am able to handle individuals and teams, and drive or direct them as appropriate, to their personal, group, or corporate IT goals and targets. I am very proficient in communications, change management, and resource management.</p>
+<p>I have superior speaking and writing command in the English and Filipino languages, and am able to efficiently deal with foreign support managers and engineers.</td>
   </tr>
-</table>
-
+</table></p>
 <hr />
 <p><h2>Experience</h2></p>
 <table>
