--- a/pages/cv.html
+++ b/pages/cv.html
@@ -55,8 +55,8 @@
 
 <h2>Qualifications</h2>
 
-<hr />
-<p><table>
+<p>--
+<table>
   <tr>
     <td>SYSTEMS ADMINISTRATION</td>
     <td>I have done GNU/Linux and BSD/Unix systems administration since 1995. I have 11 years of database design and administration experience, and 9 years of web programming experience. I also have 10 years of domains and web site and app hosting experience, and 7 years of cloud-computing and infrastructure experience.</p>
@@ -72,16 +72,18 @@
 <p>I have superior speaking and writing command in the English and Filipino languages, and am able to efficiently deal with foreign support managers and engineers.</td>
   </tr>
 </table></p>
-<hr />
-<p><h2>Experience</h2></p>
+<h2>Experience</h2>
+
+<p>--
 <table>
   <tr>
     <td>March 2013 to present</td>
     <td><pre>Community Manager
 Google Business Group - Cagayan de Oro
-Cagayan de Oro City</pre>
-
-- Manages and facilitates activities for this business group based in Cagayan de Oro City
+Cagayan de Oro City</pre></p>
+<ul>
+<li>
+<p>Manages and facilitates activities for this business group based in Cagayan de Oro City
 <br />- Conducts technical trainings and workshops for the academe, businesses, and the local community using Google products, tools, and technologies.
 <br />- Plans, coordinates, and holds community events and gatherings; coordinates with other local communities such as DevCon PH, Google Developers Group, Google Educators Group, Google Student Ambassadors Program, and Startup Weekend, among others.</td>
   </tr>
@@ -89,33 +91,38 @@ Cagayan de Oro City</pre>
     <td>June 2012 to present</td>
     <td><pre>Systems Administrator for Oracle PeopleSoft Campus Solutions
 Office of the University Registrar / Computing and Information Services Office
-Xavier University – Ateneo de Cagayan</pre>
-
-- Maintains Weblogic front-end servers, Tuxedo middleware, PeopleSoft Campus Solutions domains and processes, and SQL Server databases; including all relevant core infrastructure, applications, software, and support of the university’s Student Lifecycle Management System (SLMIS) </td>
+Xavier University – Ateneo de Cagayan</pre></p>
+</li>
+<li>
+<p>Maintains Weblogic front-end servers, Tuxedo middleware, PeopleSoft Campus Solutions domains and processes, and SQL Server databases; including all relevant core infrastructure, applications, software, and support of the university’s Student Lifecycle Management System (SLMIS) </td>
   </tr>
   <tr>
     <td>February 2010 to present</td>
     <td><pre>Technical Partner, Solutions Specialist
-Caelum Techlogic (caelumtechlogic.info)</pre>
-
-- Offers trainings on GNU/Linux
+Caelum Techlogic (caelumtechlogic.info)</pre></p>
+</li>
+<li>
+<p>Offers trainings on GNU/Linux
 <br />- Develops enterprise application systems focused on ERPs, CRMs, SaaS, and PaaS (on AWS, Linode, and other compute cloud providers)
 <br />- Designs and deploys enterprise cloud-centric server infrastructure using open-source cloud technologies (OpenStack, OpenVZ, etc)
-<br />- Offers operating system and application deployment and configuration services including but not limited to:
-
+<br />- Offers operating system and application deployment and configuration services including but not limited to:</p>
+</li>
+</ul>
 <ul><li>GNU/Linux (SuSE, Ubuntu, Debian, RHEL/CentOS/Fedora)</li>
 <li>GNU/Linux services deployment and administration (Apache HTTP Server, Apache Tomcat, Nginx, Squid proxy, Bind/DNS, DHCP, Postfix, Samba, LDAP, SVN, Git, NFS)</li>
 <li>LAMP (Linux, Apache/Nginx, MySQL, PHP, PHP-FPM) stack deployment</li>
 <li>PFSense Router/Firewall deployment</li>
 <li>CMS deployment (Wordpress, Joomla, Drupal)</li></ul>
-</td>
+
+<p></td>
   </tr>
   <tr>
     <td>February 2010 to February 2015</td>
     <td><pre>Technical Manager, Owner
-JMKTech (jmktech.com)</pre>
-
-- Manages domains and shared hosting services for bloggers, small companies, or individuals, as a hosting reseller and solutions provider
+JMKTech (jmktech.com)</pre></p>
+<ul>
+<li>
+<p>Manages domains and shared hosting services for bloggers, small companies, or individuals, as a hosting reseller and solutions provider
 <br />- Develops websites or portals using Yii framework</td>
   </tr>
   <tr>
@@ -123,16 +130,18 @@ JMKTech (jmktech.com)</pre>
     <td><pre>Part-time College Instructor
 Xavier University – Ateneo de Cagayan
 Department of Computer Studies
-College of Engineering</pre>
-
-- Taught elective courses on industry practices and methods in project management and software development</td>
+College of Engineering</pre></p>
+</li>
+<li>
+<p>Taught elective courses on industry practices and methods in project management and software development</td>
   </tr>
   <tr>
     <td>August 2009 to July 2012</td>
     <td><pre>Technical Head, Systems Administration Consultant
-Globalworkforce, Time Doctor LLC, Staff.com LLC</pre>
-
-- Manages all cloud-compute infrastructure planning and deployment
+Globalworkforce, Time Doctor LLC, Staff.com LLC</pre></p>
+</li>
+<li>
+<p>Manages all cloud-compute infrastructure planning and deployment
 <br />- Coordinates developer requirements and makes appropriate infrastructure updates or upgrades
 <br />- Manages team of system administrators</td>
   </tr>
@@ -140,13 +149,15 @@ Globalworkforce, Time Doctor LLC, Staff.com LLC</pre>
     <td>April 2008 to August 2009</td>
     <td><pre>IT Manager
 GlobalWorkforce / XgenMobile
-No. 0616-041461, Panama City, Panama
-
-Focus Interactive Outsourcing Corp.
+No. 0616-041461, Panama City, Panama</p>
+</li>
+</ul>
+<p>Focus Interactive Outsourcing Corp.
 3F Diamond Interiors Bldg, Humabon Drive
-NRA, Cebu City</pre>
-
-- Manages all corporate IT planning, development, and deployment
+NRA, Cebu City</pre></p>
+<ul>
+<li>
+<p>Manages all corporate IT planning, development, and deployment
 <br />- Manages team in acquiring, setting up, maintaining, and hardening cloud-based server systems, VPS, shared, or dedicated servers for the various businesses, and minimizing costs where possible
 <br />- Manages the projects and tasks assigned to a team of system administrators, as well as the local system and network administrator
 <br />- Plans new hosting requirements using current business models and forecasting
@@ -157,11 +168,12 @@ NRA, Cebu City</pre>
   </tr>
   <tr>
     <td>May 2006 to April 2008</td>
-    <td><pre>Head of Server, Systems, and Network Administration, & Senior PHP Programmer
+    <td><pre>Head of Server, Systems, and Network Administration, &amp; Senior PHP Programmer
 Focus Interactive Outsourcing Corp.
-Mandaue City, Cebu</pre>
-
-- Facilitated in the plan, design, construction, and cabling in new office location, and planned and coordinated the transfer of equipment to the new office
+Mandaue City, Cebu</pre></p>
+</li>
+<li>
+<p>Facilitated in the plan, design, construction, and cabling in new office location, and planned and coordinated the transfer of equipment to the new office
 <br />- In charge of acquiring, setting up, maintaining, and hardening dedicated servers for the various businesses, and minimizing cost where possible
 <br />- In charge of planning future hostings, using current business models and requirements forecasting
 <br />- Ensures that dedicated servers had the most uptime possible, and that issues are resolved promptly
@@ -174,12 +186,13 @@ Mandaue City, Cebu</pre>
   </tr>
   <tr>
     <td>November 2003 to June 2006</td>
-    <td><pre>Systems Analyst & Programmer (Supervisor)
+    <td><pre>Systems Analyst &amp; Programmer (Supervisor)
 Systems Development and Maintenance Section
-ICTSD, Cagayan Electric Power & Light Company, Inc.
-Cagayan de Oro City</pre>
-
-- In-charge of development of web applications to interface with corporate application systems and databases. In-charge of both intranet and internet websites and the management of content.
+ICTSD, Cagayan Electric Power &amp; Light Company, Inc.
+Cagayan de Oro City</pre></p>
+</li>
+<li>
+<p>In-charge of development of web applications to interface with corporate application systems and databases. In-charge of both intranet and internet websites and the management of content.
 <br />- Corporate databases administrator for pertinent applications on select server systems.
 <br />- In-charge of server systems administration of IBM Blade Server systems, Fibre Direct Attached Storage (FDAS) systems, and Network Attached Storage (NAS) systems.
 <br />- In-charge of network and systems administration on Internet-related infrastructure and processes, which include corporate firewall appliances, mail and website servers, and spam/antivirus servers.
@@ -190,9 +203,10 @@ Cagayan de Oro City</pre>
     <td><pre>Research Assistant and Programmer
 Research Unit - Xavier University Computer Center
 Department of Computer Studies
-Xavier University, Cagayan de Oro City</pre>
-
-- Developed an operator-independent SMS-to-DB gateway, which was primarily intended to establish the framework or setup of an information gateway that will operate outside the domain of mobile companies.
+Xavier University, Cagayan de Oro City</pre></p>
+</li>
+<li>
+<p>Developed an operator-independent SMS-to-DB gateway, which was primarily intended to establish the framework or setup of an information gateway that will operate outside the domain of mobile companies.
 <br />- Researched on the feasibility of implementation of short messaging system (SMS) technology for information-on-demand services.
 <br />- Used grade querying on a student database via SMS as the test application for the SMS-to-DB gateway.</td>
   </tr>
@@ -200,18 +214,20 @@ Xavier University, Cagayan de Oro City</pre>
     <td>February 2000 to May 2001</td>
     <td><pre>Account Executive, Training Officer, Service Manager
 Allegro Beverage Corporation
-Santiago Village, Makati City</pre>
-
-- Trained new service technicians on food and beverage equipment and materials knowledge, full troubleshooting techniques and approaches, adjustment and calibration concepts, full repairs and replacement procedures, handling repair calls and reports, and department and administrative procedures
+Santiago Village, Makati City</pre></p>
+</li>
+<li>
+<p>Trained new service technicians on food and beverage equipment and materials knowledge, full troubleshooting techniques and approaches, adjustment and calibration concepts, full repairs and replacement procedures, handling repair calls and reports, and department and administrative procedures
 <br />- Trained new sales executives on product and equipment knowledge, selling techniques, handling prospects, clients, and their objections, cold-calling techniques, profit vs. investment pictures and calculations, basic troubleshooting, presentation techniques, and department and administrative procedures</td>
   </tr>
   <tr>
     <td>November 1998 to March 1999</td>
     <td><pre>Web Developer
 Computech Computer Systems, Inc.
-Ortigas Center, Pasig City</pre>
-
-- Led a team from AMACC, as sub-contractors for Computech, in the Senate Web Site Theme and Senators' Web Page Design Contests; did finance and feasibility studies, and applied marketing and planning strategies in preparation for mock publishing of the Senate web site
+Ortigas Center, Pasig City</pre></p>
+</li>
+<li>
+<p>Led a team from AMACC, as sub-contractors for Computech, in the Senate Web Site Theme and Senators' Web Page Design Contests; did finance and feasibility studies, and applied marketing and planning strategies in preparation for mock publishing of the Senate web site
 <br />- Created a general theme for the web site of the Senate of the Philippines, and one web site for Senator Ramon Magsaysay, Jr. using Visual InterDev, CGI scripting, and HTML to create appropriate web design, database logic, and visual interface for the web site</td>
   </tr>
   <tr>
@@ -220,9 +236,10 @@ Ortigas Center, Pasig City</pre>
 Business Development Officer
 Eiger Consulting and Information Services
 Global Cafe
-Loyola Heights, Quezon City</pre>
-
-- Set up, configured, and maintained ECIS's Linux servers, made sure that dialup monitoring scripts were running and updating files, allowed user file sharing for café regulars, and for business clients
+Loyola Heights, Quezon City</pre></p>
+</li>
+<li>
+<p>Set up, configured, and maintained ECIS's Linux servers, made sure that dialup monitoring scripts were running and updating files, allowed user file sharing for café regulars, and for business clients
 <br />- Installed and organized network connections for Global Cafe's branches and helped facilitate the migration of ECIS from Iphil Communications, Inc. to United Network Access of BayanTel
 <br />- Handled all business accounts, performed associate work for the administrative officer and periodically checked on operations of the different branches of Global Cafe handled business accounts, prepared project proposals for internet account sales and headed website design and development projects for clients</td>
   </tr>
@@ -230,13 +247,15 @@ Loyola Heights, Quezon City</pre>
     <td>August 1995 to October 1996</td>
     <td><pre>System Operator, Virtual AdMU
 Ateneo de Manila University
-Loyola Heights, Quezon City</pre>
-
-- Developed and ran a NUTS-based talker on a Linux server, programmed and maintained through a shell account
+Loyola Heights, Quezon City</pre></p>
+</li>
+<li>
+<p>Developed and ran a NUTS-based talker on a Linux server, programmed and maintained through a shell account
 <br />- Did extensive C and C++ programming in compliance with the curriculum set by the Computer Science Program</td>
   </tr>
-</table>
-
+</table></p>
+</li>
+</ul>
 <hr />
 <p><h2>Seminars, Talks, or Trainings Given</h2></p>
 <table>
