--- a/pages/cv.html
+++ b/pages/cv.html
@@ -53,9 +53,8 @@
   </tr>
 </table>
 
-<h2>Qualifications</h2>
-
 <p>--
+<br /><strong>Qualifications</strong>
 <table>
   <tr>
     <td>SYSTEMS ADMINISTRATION</td>
@@ -72,9 +71,8 @@
 <p>I have superior speaking and writing command in the English and Filipino languages, and am able to efficiently deal with foreign support managers and engineers.</td>
   </tr>
 </table></p>
-<h2>Experience</h2>
-
 <p>--
+<br /><strong>Experience</strong>
 <table>
   <tr>
     <td>March 2013 to present</td>
@@ -256,8 +254,8 @@ Loyola Heights, Quezon City</pre></p>
 </table></p>
 </li>
 </ul>
-<hr />
-<p><h2>Seminars, Talks, or Trainings Given</h2></p>
+<p>--
+<br /><strong>Seminars, Talks, or Trainings Given</strong>
 <table>
   <tr>
     <td><strong>Title of Seminar, Talk, or Training</strong></td>
@@ -289,7 +287,7 @@ Capitol University, Cagayan de Oro City</td>
     <td>Communicating Across Platforms
 Workshop for XUHS Student Leaders</td>
     <td>July 5, 2014</td>
-    <td>GBG CDO & GSA for CDO
+    <td>GBG CDO &amp; GSA for CDO
 Xavier University High School, Cagayan de Oro City
 </td>
   </tr>
@@ -297,7 +295,7 @@ Xavier University High School, Cagayan de Oro City
     <td>Social Media and its Benefits to Businesses</td>
     <td>June 28, 2014</td>
     <td>Social Media Day 2014
-GBG CDO & CDO Bloggers Inc.
+GBG CDO &amp; CDO Bloggers Inc.
 Junno Delicafe, Cagayan de Oro City</td>
   </tr>
   <tr>
@@ -306,7 +304,7 @@ Junno Delicafe, Cagayan de Oro City</td>
 </td>
     <td>Google Business Group - Cagayan de Oro
 - Xavier University Little Theater
-- Tsinoy’s Pares & Mami House
+- Tsinoy’s Pares &amp; Mami House
 Cagayan de Oro City</td>
   </tr>
   <tr>
@@ -338,7 +336,7 @@ A Google Apps Workshop for XU Student Leaders</td>
     <td>Enhancing Research with Google Technologies
 A Workshop on Rapid Data Gathering and Information Sharing Using Google Drive and Google+</td>
     <td>August 7, 2013</td>
-    <td>GBG CDO & Kinaadman Research Center
+    <td>GBG CDO &amp; Kinaadman Research Center
 Xavier University AVR8, Cagayan de Oro City</td>
   </tr>
   <tr>
@@ -403,10 +401,9 @@ FOCUS Interactive Outsourcing Corp., Cebu City</td>
     <td>2005</td>
     <td>1st KLUG Technical Session</td>
   </tr>
-</table>
-
-<hr />
-<p><h2>Seminars, Talks, or Trainings Attended</h2></p>
+</table></p>
+<p>--
+<br /><strong>Seminars, Talks, or Trainings Attended</strong>
 <table>
   <tr>
     <td><strong>Title of Seminar, Talk, or Training</strong></td>
@@ -499,7 +496,7 @@ Dynasty Hotel, Cagayan de Oro City</td>
 Cagayan de Oro City</td>
   </tr>
   <tr>
-    <td>Lucent Technologies/Bell Labs/AT&T Firewalling Seminar</td>
+    <td>Lucent Technologies/Bell Labs/AT&amp;T Firewalling Seminar</td>
     <td>1999</td>
     <td>Shangri-La Plaza, Makati City</td>
   </tr>
@@ -509,14 +506,13 @@ Cagayan de Oro City</td>
     <td>Iphil Communications, Inc.
 Makati City</td>
   </tr>
-</table>
-
-<hr />
-<p><h2>Appointments</h2></p>
-<p><strong>Committee on Decorum and Investigation SY 2014-2015</strong>
+</table></p>
+<p>--
+<br /><strong>Appointments</strong>
+<br />Committee on Decorum and Investigation SY 2014-2015
 <br />Xavier University - Ateneo de Cagayan</p>
-<hr />
-<p><h2>Education</h2>
+<p>--
+<br /><strong>Education</strong>
 <table>
   <tr>
     <td>Xavier University - Ateneo de Cagayan</td>
@@ -539,8 +535,8 @@ Makati City</td>
     <td>June 2001 to October 2003</td>
   </tr>
 </table></p>
-<hr />
-<p><h2>Current Organizations</h2></p>
+<p>--
+<br /><strong>Current Organizations</strong></p>
 <pre>Google Business Group – Cagayan de Oro
 Google Developers Group – Cagayan de Oro
 DevCon.ph</pre>
