--- a/archives.html
+++ b/archives.html
@@ -26,6 +26,8 @@
     <dd><a href="/moving-forward.html">Moving Forward</a></dd>
     <dt>Fri 27 February 2015</dt>
     <dd><a href="/engineering-it-business-management-and-technopreneurship.html">Engineering, I.T., Business Management, and Technopreneurship</a></dd>
+    <dt>Wed 25 February 2015</dt>
+    <dd><a href="/apple-announces-macbook-pro-repair-extension-program-for-video-issues.html">Apple Announces MacBook Pro Repair Extension Program for Video Issues</a></dd>
     <dt>Fri 20 February 2015</dt>
     <dd><a href="/civic-tales-0215.html">Civic Tales 0215</a></dd>
     <dt>Sun 01 February 2015</dt>
