--- a/pages/cv.html
+++ b/pages/cv.html
@@ -16,6 +16,7 @@
                 <nav><ul>
                     <li><a href="http://jon.doblados.net/pages/about.html">About</a></li>
                     <li><a href="http://jon.doblados.net/pages/contact.html">Contact</a></li>
+                    <li class="active"><a href="http://jon.doblados.net/pages/cv.html">CV</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
