--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -12,10 +12,10 @@
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="https://jon.doblados.net/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="https://jon.doblados.net/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="https://jon.doblados.net/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="https://jon.doblados.net/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="https://triggered.doblados.net/css/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="https://triggered.doblados.net/css/poole.css">
+  <link type="text/css" rel="stylesheet" href="https://triggered.doblados.net/css/syntax.css">
+  <link type="text/css" rel="stylesheet" href="https://triggered.doblados.net/css/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -31,7 +31,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://jon.doblados.net/"><h1>Triggered</h1></a>
+      <a href="https://triggered.doblados.net/"><h1>Triggered</h1></a>
       <p class="lead">
        Thoughts and musings of a corporate IT guy in a foreign land 
       </p>
@@ -39,7 +39,7 @@
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="https://jon.doblados.net/">Home</a> </li>
+        <li><a href="https://triggered.doblados.net/">Home</a> </li>
         <li><a href="http://localhost:1313/pages/about.html"> About </a></li><li><a href="https://linkedin.com/in/jondoblados"> LinkedIn </a></li><li><a href="https://twitter.com/jondoblados/"> Twitter </a></li>
       </ul>
     </nav>
