updated about page

--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -65,14 +65,8 @@
   <section class="main-content">
     
   <h1>About</h1>
-  <p>Since 1995, Jon has had broad and commanding experience in enterprise systems, as well as infrastructure management in banking and finance tech, utilities, software development, and the academe.</p>
-<p>Through the years, he has evolved from simple systems operations and administration to advanced infrastructure and systems design and architecture. He has taken learnings and have used these to contribute greatly to the enhancement of the unit that he worked in, especially the organisation that he belonged. His strong belief in open-source systems and cooperation have allowed him to help communities use technology. He has been able to give back by volunteering to educate and to train by giving talks, workshops, and seminars. He has likewise spoken in several tech conferences.</p>
-<p>Jon has almost always left significant contributions and legacies to the computing systems that he has handled. For example, all enterprise systems that he was involved in have been modernised from simple client-server systems to highly-available and robust systems, running on high-performance servers and networks.</p>
-<p>In recent years, he has learned to adopt quickly to the significantly fast development of information and communications technology and the myriad of requirements that stem from these. In the process, he has made myself quite proficient in the areas of digitisation and cloud computing, both of which are now ubiquitous and everyday concepts. His involvement in start-ups have allowed him to gain knowledge to help businesses operate and manage their assets on premise and/or on the cloud.</p>
-<p>As a seasoned systems and platform engineer who now does DevOps and SRE, Jon is well-versed in ITSM, Change and Release Management, and Agile Methodologies. He has been able to help enterprises understand and take advantage of virtualisation, containerisation, orchestration, monitoring and pipeline as code or continuous integration and continuous deployment, configuration management, infrastructure and applications provisioning automation, search, databases, and messaging in multi-tenanted and multi-structured environments.</p>
-<p>He believes that he will be able to contribute some more and help communities, SMEs, and large enterprises make the most of available technology for their benefit.</p>
-<p>Jon is an alumnus of the Landmark Forum and is still completing his Masters degree in Information Technology.</p>
-<!-- raw HTML omitted -->
+  <p>Christian, husband, father, watered-down g33k, 80s kid, cloud platforms, k8s, devops, and all-around janitor</p>
+<p>Heart survivor, now with new plumbing and taking each day as it comes, all glory to God!</p>
 
 
     <footer class="site-footer">
