--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -21,7 +21,7 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js" integrity="sha384-9Nhn55MVVN0/4OFx7EE5kpFBPsEMZxKTCnA+4fqDmg12eCTqGi6+BB2LjY8brQxJ" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 
-  <title>facebook | Triggered</title>
+  <title>Home | Triggered</title>
 </head>
 
 <body>
@@ -70,19 +70,9 @@
 
   <section class="main-content">
     
-<h1>facebook</h1>
-<ul>
+  <h1>Home</h1>
+  <p>Some text goes here.</p>
 
-
-  <li>
-    
-    2021-11-16
-    <a href="https://triggered.doblados.net/posts/goodbye-facebook/">
-      Goodbye, Facebook
-    </a>
-  </li>        
-
-</ul>
 
     <footer class="site-footer">
   <span class="site-footer-credits">
